[package]
name = "databass"
version = "0.1.0"
authors = ["Luc Perkins <lucperkins@gmail.com>"]
build = "build.rs"

[lib]
name = "lib"
path = "src/lib.rs"
doctest = false
test = false

[[bin]]
name = "bin"
path = "src/bin/main.rs"

[build-dependencies]
protoc-rust-grpc = { git = "https://github.com/stepancheg/grpc-rust" }

[dependencies]
protobuf        = "1.*"
futures         = "0.*"
futures-cpupool = "0.1.*"
tls-api         = "0.*"
httpbis         = "0.4.1"
grpc            = "*"