[package]
name = "databass"
version = "0.1.0"
authors = ["Luc Perkins <lucperkins@gmail.com>"]
build = "build.rs"

[lib]
name = "lib"
path = "src/lib.rs"
doctest = false
test = false

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[build-dependencies]
protoc-rust-grpc = { git = "https://github.com/stepancheg/grpc-rust" }

[dependencies]
protobuf        = "1.4.1"
futures         = "0.1.14"
futures-cpupool = "0.1.5"
tls-api         = "0.1.8"
httpbis         = "0.4.1"
grpc            = "0.2.0"
rocksdb         = "0.6.0"